fix image flex when stacking on mobile #260
Fixes https://github.com/maithemewp/mai-engine/issues/260

--- a/assets/scss/components/entry/_entry.scss
+++ b/assets/scss/components/entry/_entry.scss
@@ -102,7 +102,7 @@
 		--entry-flex-direction: column;
 		--entry-flex-wrap: nowrap;
 		--entry-image-link-max-width: 100%;
-		--entry-image-link-flex: 1 1 100%;
+		--entry-image-link-flex: initial;
 		--entry-image-link-order: -1;
 	}
 }
